crates/oxc_react_compiler/tests/snapshots/independently-memoize-object-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/independently-memoize-object-property.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c) {
	const $ = _c(7);
	let x;
	if ($[0] !== a || $[1] !== b || $[2] !== c) {
		x = { a };
		let t0;
		if ($[4] !== b || $[5] !== c) {
			t0 = [b, c];
			$[4] = b;
			$[5] = c;
			$[6] = t0;
		} else {
			t0 = $[6];
		}
		x.y = t0;
		$[0] = a;
		$[1] = b;
		$[2] = c;
		$[3] = x;
	} else {
		x = $[3];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
