crates/oxc_react_compiler/tests/snapshots/infer-component-doubly-parenthesized-arrow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-component-doubly-parenthesized-arrow.tsx
---
import { c as _c } from "react/compiler-runtime";
type Props = {
	original: string;
};
export const DiffEditor = ((t0) => {
	const $ = _c(2);
	const { original } = t0;
	let t1;
	if ($[0] !== original) {
		t1 = <div>{original}</div>;
		$[0] = original;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
});
