crates/oxc_react_compiler/tests/snapshots/infer-computed-delete.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-computed-delete.js
---
// @debug @enablePreserveExistingMemoizationGuarantees:false
function Component(props) {
	makeObject();
}
