crates/oxc_react_compiler/tests/snapshots/infer-dont-compile-components-with-multiple-params.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-dont-compile-components-with-multiple-params.js
---
No changes.
