crates/oxc_react_compiler/tests/snapshots/infer-forward-ref-generic-typed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-forward-ref-generic-typed.tsx
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
import { forwardRef } from "react";
type Props = {
	label: string;
};
const Card = forwardRef<HTMLDivElement, Props>((t0, viewTracker) => {
	const $ = _c(3);
	const { label } = t0;
	let t1;
	if ($[0] !== label || $[1] !== viewTracker) {
		t1 = <div ref={viewTracker}>{label}</div>;
		$[0] = label;
		$[1] = viewTracker;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
});
export default Card;
