crates/oxc_react_compiler/tests/snapshots/infer-forwardref-callback-with-non-ref-param.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-forwardref-callback-with-non-ref-param.tsx
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
import { forwardRef } from "react";
type Props = {
	text: string;
};
const TopStoriesItem = forwardRef<HTMLDivElement, Props>((t0, viewTracker) => {
	const $ = _c(3);
	const { text } = t0;
	let t1;
	if ($[0] !== text || $[1] !== viewTracker) {
		t1 = <div ref={viewTracker}>{text}</div>;
		$[0] = text;
		$[1] = viewTracker;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
});
export default TopStoriesItem;
